mise à jour cours

--- a/cours_modeles_mixtes/cours_GLMM_ENGEES_2025.Rmd
+++ b/cours_modeles_mixtes/cours_GLMM_ENGEES_2025.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Introduction aux modèles mixtes (LMM et GLMM)"
-author: "Jean-Pierre Vacher"
+author: "Jean-Pierre Vacher. jpvacher@gmail.com"
 date: 'last updated: `r Sys.Date()`'
 output:
   slidy_presentation: default
